Package_Tools/include-C/gnutls/inarbeit/fertig/gnutls.h

/**
 * gnutls_x509_crt_fmt_t:
 * @GNUTLS_X509_FMT_DER: X.509 certificate in DER format (binary).
 * @GNUTLS_X509_FMT_PEM: X.509 certificate in PEM format (text).
 *
 * Enumeration of different certificate encoding formats.
 */
typedef enum {
	GNUTLS_X509_FMT_DER = 0,
	GNUTLS_X509_FMT_PEM = 1
} gnutls_x509_crt_fmt_t;
/**
 * gnutls_sec_param_t:
 * @GNUTLS_SEC_PARAM_UNKNOWN: Cannot be known
 * @GNUTLS_SEC_PARAM_INSECURE: Less than 42 bits of security
 * @GNUTLS_SEC_PARAM_EXPORT: 42 bits of security
 * @GNUTLS_SEC_PARAM_VERY_WEAK: 64 bits of security
 * @GNUTLS_SEC_PARAM_WEAK: 72 bits of security
 * @GNUTLS_SEC_PARAM_LOW: 80 bits of security
 * @GNUTLS_SEC_PARAM_LEGACY: 96 bits of security
 * @GNUTLS_SEC_PARAM_MEDIUM: 112 bits of security (used to be %GNUTLS_SEC_PARAM_NORMAL)
 * @GNUTLS_SEC_PARAM_HIGH: 128 bits of security
 * @GNUTLS_SEC_PARAM_ULTRA: 192 bits of security
 * @GNUTLS_SEC_PARAM_FUTURE: 256 bits of security
 *
 * Enumeration of security parameters for passive attacks.
 */
typedef enum {
	GNUTLS_SEC_PARAM_UNKNOWN = 0,
	GNUTLS_SEC_PARAM_INSECURE = 5,
	GNUTLS_SEC_PARAM_EXPORT = 10,
	GNUTLS_SEC_PARAM_VERY_WEAK = 15,
	GNUTLS_SEC_PARAM_WEAK = 20,
	GNUTLS_SEC_PARAM_LOW = 25,
	GNUTLS_SEC_PARAM_LEGACY = 30,
	GNUTLS_SEC_PARAM_MEDIUM = 35,
	GNUTLS_SEC_PARAM_HIGH = 40,
	GNUTLS_SEC_PARAM_ULTRA = 45,
	GNUTLS_SEC_PARAM_FUTURE = 50,
	GNUTLS_SEC_PARAM_MAX = GNUTLS_SEC_PARAM_FUTURE
} gnutls_sec_param_t;
typedef struct gnutls_session_int *gnutls_session_t;
typedef struct gnutls_dh_params_int *gnutls_dh_params_t;
typedef struct {
	unsigned char *data;
	unsigned int size;
} gnutls_datum_t;
typedef struct gnutls_library_config_st {
	const char *name;
	const char *value;
} gnutls_library_config_st;
typedef struct gnutls_x509_privkey_int *gnutls_x509_privkey_t;
typedef struct gnutls_x509_crl_int *gnutls_x509_crl_t;
typedef struct gnutls_x509_crt_int *gnutls_x509_crt_t;
typedef struct gnutls_certificate_credentials_st
	*gnutls_certificate_credentials_t;
/* CERTFILE is an x509 certificate in PEM form.
 * KEYFILE is a pkcs-1 private key in PEM form (for RSA keys).
 */
void gnutls_certificate_free_credentials(gnutls_certificate_credentials_t sc);
int gnutls_certificate_allocate_credentials(
	gnutls_certificate_credentials_t *res);
int gnutls_certificate_get_issuer(gnutls_certificate_credentials_t sc,
				  gnutls_x509_crt_t cert,
				  gnutls_x509_crt_t *issuer,
				  unsigned int flags);
int gnutls_certificate_get_crt_raw(gnutls_certificate_credentials_t sc,
				   unsigned idx1, unsigned idx2,
				   gnutls_datum_t *cert);
void gnutls_certificate_free_keys(gnutls_certificate_credentials_t sc);
void gnutls_certificate_free_cas(gnutls_certificate_credentials_t sc);
void gnutls_certificate_free_ca_names(gnutls_certificate_credentials_t sc);
void gnutls_certificate_free_crls(gnutls_certificate_credentials_t sc);
void gnutls_certificate_set_dh_params(gnutls_certificate_credentials_t res,
				      gnutls_dh_params_t dh_params);
int gnutls_certificate_set_known_dh_params(gnutls_certificate_credentials_t res,
					   gnutls_sec_param_t sec_param);
void gnutls_certificate_set_verify_flags(gnutls_certificate_credentials_t res,
					 unsigned int flags);
unsigned int
gnutls_certificate_get_verify_flags(gnutls_certificate_credentials_t res);
/**
 * gnutls_certificate_flags:
 * @GNUTLS_CERTIFICATE_SKIP_KEY_CERT_MATCH: Skip the key and certificate matching check.
 * @GNUTLS_CERTIFICATE_API_V2: If set the gnutls_certificate_set_*key* functions will return an index of the added key pair instead of zero.
 * @GNUTLS_CERTIFICATE_SKIP_OCSP_RESPONSE_CHECK: If set, the gnutls_certificate_set_ocsp_status_request_file
 *    function, will not check whether the response set matches any of the certificates.
 * @GNUTLS_CERTIFICATE_VERIFY_CRLS: This will enable CRL verification when added in the certificate structure.
 *    When used, it requires CAs to be added before CRLs.
 *
 * Enumeration of different certificate credentials flags.
 */
typedef enum gnutls_certificate_flags {
	GNUTLS_CERTIFICATE_SKIP_KEY_CERT_MATCH = 1,
	GNUTLS_CERTIFICATE_API_V2 = (1 << 1),
	GNUTLS_CERTIFICATE_SKIP_OCSP_RESPONSE_CHECK = (1 << 2),
	GNUTLS_CERTIFICATE_VERIFY_CRLS = (1 << 3)
} gnutls_certificate_flags;
void gnutls_certificate_set_flags(gnutls_certificate_credentials_t,
				  unsigned flags);
void gnutls_certificate_set_verify_limits(gnutls_certificate_credentials_t res,
					  unsigned int max_bits,
					  unsigned int max_depth);
int gnutls_certificate_set_x509_system_trust(
	gnutls_certificate_credentials_t cred);
int gnutls_certificate_set_x509_trust_file(gnutls_certificate_credentials_t cred,
					   const char *cafile,
					   gnutls_x509_crt_fmt_t type);
int gnutls_certificate_set_x509_trust_dir(gnutls_certificate_credentials_t cred,
					  const char *ca_dir,
					  gnutls_x509_crt_fmt_t type);
int gnutls_certificate_set_x509_trust_mem(gnutls_certificate_credentials_t res,
					  const gnutls_datum_t *ca,
					  gnutls_x509_crt_fmt_t type);
int gnutls_certificate_set_x509_crl_file(gnutls_certificate_credentials_t res,
					 const char *crlfile,
					 gnutls_x509_crt_fmt_t type);
int gnutls_certificate_set_x509_crl_mem(gnutls_certificate_credentials_t res,
					const gnutls_datum_t *CRL,
					gnutls_x509_crt_fmt_t type);
int gnutls_certificate_set_x509_key_file(gnutls_certificate_credentials_t res,
					 const char *certfile,
					 const char *keyfile,
					 gnutls_x509_crt_fmt_t type);
int gnutls_certificate_set_x509_key_file2(gnutls_certificate_credentials_t res,
					  const char *certfile,
					  const char *keyfile,
					  gnutls_x509_crt_fmt_t type,
					  const char *pass, unsigned int flags);
int gnutls_certificate_set_x509_key_mem(gnutls_certificate_credentials_t res,
					const gnutls_datum_t *cert,
					const gnutls_datum_t *key,
					gnutls_x509_crt_fmt_t type);
int gnutls_certificate_set_x509_key_mem2(gnutls_certificate_credentials_t res,
					 const gnutls_datum_t *cert,
					 const gnutls_datum_t *key,
					 gnutls_x509_crt_fmt_t type,
					 const char *pass, unsigned int flags);
void gnutls_certificate_send_x509_rdn_sequence(gnutls_session_t session,
					       int status);
int gnutls_certificate_set_x509_simple_pkcs12_file(
	gnutls_certificate_credentials_t res, const char *pkcs12file,
	gnutls_x509_crt_fmt_t type, const char *password);
int gnutls_certificate_set_x509_simple_pkcs12_mem(
	gnutls_certificate_credentials_t res, const gnutls_datum_t *p12blob,
	gnutls_x509_crt_fmt_t type, const char *password);
/* New functions to allow setting already parsed X.509 stuff.
 */

int gnutls_certificate_set_x509_key(gnutls_certificate_credentials_t res,
				    gnutls_x509_crt_t *cert_list,
				    int cert_list_size,
				    gnutls_x509_privkey_t key);
int gnutls_certificate_set_x509_trust(gnutls_certificate_credentials_t res,
				      gnutls_x509_crt_t *ca_list,
				      int ca_list_size);
int gnutls_certificate_set_x509_crl(gnutls_certificate_credentials_t res,
				    gnutls_x509_crl_t *crl_list,
				    int crl_list_size);
int gnutls_certificate_get_x509_key(gnutls_certificate_credentials_t res,
				    unsigned index, gnutls_x509_privkey_t *key);
int gnutls_certificate_get_x509_crt(gnutls_certificate_credentials_t res,
				    unsigned index,
				    gnutls_x509_crt_t **crt_list,
				    unsigned *crt_list_size);
/* OCSP status request extension, RFC 6066 */
typedef int (*gnutls_status_request_ocsp_func)(gnutls_session_t session,
					       void *ptr,
					       gnutls_datum_t *ocsp_response);
void gnutls_certificate_set_ocsp_status_request_function(
	gnutls_certificate_credentials_t res,
	gnutls_status_request_ocsp_func ocsp_func, void *ptr);
int gnutls_certificate_set_ocsp_status_request_function2(
	gnutls_certificate_credentials_t res, unsigned idx,
	gnutls_status_request_ocsp_func ocsp_func, void *ptr);
int gnutls_certificate_set_ocsp_status_request_file(
	gnutls_certificate_credentials_t res, const char *response_file,
	unsigned idx);
int gnutls_certificate_set_ocsp_status_request_file2(
	gnutls_certificate_credentials_t res, const char *response_file,
	unsigned idx, gnutls_x509_crt_fmt_t fmt);
int gnutls_certificate_set_ocsp_status_request_mem(
	gnutls_certificate_credentials_t res, const gnutls_datum_t *resp,
	unsigned idx, gnutls_x509_crt_fmt_t fmt);
time_t
gnutls_certificate_get_ocsp_expiration(gnutls_certificate_credentials_t sc,
				       unsigned idx, int oidx, unsigned flags);
int gnutls_ocsp_status_request_enable_client(
	gnutls_session_t session, gnutls_datum_t *responder_id,
	size_t responder_id_size, gnutls_datum_t *request_extensions);
int gnutls_ocsp_status_request_get(gnutls_session_t session,
				   gnutls_datum_t *response);
#define GNUTLS_OCSP_SR_IS_AVAIL 1
unsigned gnutls_ocsp_status_request_is_checked(gnutls_session_t session,
					       unsigned int flags);
int gnutls_ocsp_status_request_get2(gnutls_session_t session, unsigned idx,
				    gnutls_datum_t *response);
/* RAW public key functions (RFC7250) */
int gnutls_certificate_set_rawpk_key_mem(
	gnutls_certificate_credentials_t cred, const gnutls_datum_t *spki,
	const gnutls_datum_t *pkey, gnutls_x509_crt_fmt_t format,
	const char *pass, unsigned int key_usage, const char **names,
	unsigned int names_length, unsigned int flags);
int gnutls_certificate_set_rawpk_key_file(
	gnutls_certificate_credentials_t cred, const char *rawpkfile,
	const char *privkeyfile, gnutls_x509_crt_fmt_t format, const char *pass,
	unsigned int key_usage, const char **names, unsigned int names_length,
	unsigned int privkey_flags, unsigned int pkcs11_flags);
/* global state functions
 */
int gnutls_global_init(void);
void gnutls_global_deinit(void);
const gnutls_library_config_st *gnutls_get_library_config(void);
/**
 * gnutls_time_func:
 * @t: where to store time.
 *
 * Function prototype for time()-like function.  Set with
 * gnutls_global_set_time_function().
 *
 * Returns: Number of seconds since the epoch, or (time_t)-1 on errors.
 */
typedef time_t (*gnutls_time_func)(time_t *t);
typedef int (*mutex_init_func)(void **mutex);
typedef int (*mutex_lock_func)(void **mutex);
typedef int (*mutex_unlock_func)(void **mutex);
typedef int (*mutex_deinit_func)(void **mutex);
void gnutls_global_set_mutex(mutex_init_func init, mutex_deinit_func deinit,
			     mutex_lock_func lock, mutex_unlock_func unlock);
typedef void *(*gnutls_alloc_function)(size_t);
typedef void *(*gnutls_calloc_function)(size_t, size_t);
typedef void (*gnutls_free_function)(void *);
typedef void *(*gnutls_realloc_function)(void *, size_t);
void gnutls_global_set_time_function(gnutls_time_func time_func);
/* For use in callbacks */
extern  gnutls_alloc_function gnutls_malloc;
extern  gnutls_realloc_function gnutls_realloc;
extern  gnutls_calloc_function gnutls_calloc;
extern  gnutls_free_function gnutls_free;
extern  char *(*gnutls_strdup)(const char *);
/* a variant of memset that doesn't get optimized out */
void gnutls_memset(void *data, int c, size_t size);
/* constant time memcmp */
int gnutls_memcmp(const void *s1, const void *s2, size_t n);
typedef void (*gnutls_log_func)(int, const char *);
typedef void (*gnutls_audit_log_func)(gnutls_session_t, const char *);
void gnutls_global_set_log_function(gnutls_log_func log_func);
void gnutls_global_set_audit_log_function(gnutls_audit_log_func log_func);
void gnutls_global_set_log_level(int level);