Packages_2024/gnutls_3.8.3/gnutls/gnutls.inc


procedure gnutls_certificate_free_credentials(sc: Tgnutls_certificate_credentials_t); cdecl; external libgnutls;
function gnutls_certificate_allocate_credentials(res: Pgnutls_certificate_credentials_t): longint; cdecl; external libgnutls;
function gnutls_certificate_get_issuer(sc: Tgnutls_certificate_credentials_t; cert: Tgnutls_x509_crt_t; issuer: Pgnutls_x509_crt_t; flags: dword): longint; cdecl; external libgnutls;
function gnutls_certificate_get_crt_raw(sc: Tgnutls_certificate_credentials_t; idx1: dword; idx2: dword; cert: Pgnutls_datum_t): longint; cdecl; external libgnutls;
procedure gnutls_certificate_free_keys(sc: Tgnutls_certificate_credentials_t); cdecl; external libgnutls;
procedure gnutls_certificate_free_cas(sc: Tgnutls_certificate_credentials_t); cdecl; external libgnutls;
procedure gnutls_certificate_free_ca_names(sc: Tgnutls_certificate_credentials_t); cdecl; external libgnutls;
procedure gnutls_certificate_free_crls(sc: Tgnutls_certificate_credentials_t); cdecl; external libgnutls;
procedure gnutls_certificate_set_dh_params(res: Tgnutls_certificate_credentials_t; dh_params: Tgnutls_dh_params_t); cdecl; external libgnutls;
function gnutls_certificate_set_known_dh_params(res: Tgnutls_certificate_credentials_t; sec_param: Tgnutls_sec_param_t): longint; cdecl; external libgnutls;
procedure gnutls_certificate_set_verify_flags(res: Tgnutls_certificate_credentials_t; flags: dword); cdecl; external libgnutls;
function gnutls_certificate_get_verify_flags(res: Tgnutls_certificate_credentials_t): dword; cdecl; external libgnutls;

type
  Pgnutls_certificate_flags = ^Tgnutls_certificate_flags;
  Tgnutls_certificate_flags = longint;

const
  GNUTLS_CERTIFICATE_SKIP_KEY_CERT_MATCH = 1;
  GNUTLS_CERTIFICATE_API_V2 = 1 shl 1;
  GNUTLS_CERTIFICATE_SKIP_OCSP_RESPONSE_CHECK = 1 shl 2;
  GNUTLS_CERTIFICATE_VERIFY_CRLS = 1 shl 3;

procedure gnutls_certificate_set_flags(para1: Tgnutls_certificate_credentials_t; flags: dword); cdecl; external libgnutls;
procedure gnutls_certificate_set_verify_limits(res: Tgnutls_certificate_credentials_t; max_bits: dword; max_depth: dword); cdecl; external libgnutls;
function gnutls_certificate_set_x509_system_trust(cred: Tgnutls_certificate_credentials_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_trust_file(cred: Tgnutls_certificate_credentials_t; cafile: pchar; _type: Tgnutls_x509_crt_fmt_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_trust_dir(cred: Tgnutls_certificate_credentials_t; ca_dir: pchar; _type: Tgnutls_x509_crt_fmt_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_trust_mem(res: Tgnutls_certificate_credentials_t; ca: Pgnutls_datum_t; _type: Tgnutls_x509_crt_fmt_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_crl_file(res: Tgnutls_certificate_credentials_t; crlfile: pchar; _type: Tgnutls_x509_crt_fmt_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_crl_mem(res: Tgnutls_certificate_credentials_t; CRL: Pgnutls_datum_t; _type: Tgnutls_x509_crt_fmt_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_key_file(res: Tgnutls_certificate_credentials_t; certfile: pchar; keyfile: pchar; _type: Tgnutls_x509_crt_fmt_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_key_file2(res: Tgnutls_certificate_credentials_t; certfile: pchar; keyfile: pchar; _type: Tgnutls_x509_crt_fmt_t; pass: pchar; flags: dword): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_key_mem(res: Tgnutls_certificate_credentials_t; cert: Pgnutls_datum_t; key: Pgnutls_datum_t; _type: Tgnutls_x509_crt_fmt_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_key_mem2(res: Tgnutls_certificate_credentials_t; cert: Pgnutls_datum_t; key: Pgnutls_datum_t; _type: Tgnutls_x509_crt_fmt_t; pass: pchar; flags: dword): longint; cdecl; external libgnutls;
procedure gnutls_certificate_send_x509_rdn_sequence(session: Tgnutls_session_t; status: longint); cdecl; external libgnutls;
function gnutls_certificate_set_x509_simple_pkcs12_file(res: Tgnutls_certificate_credentials_t; pkcs12file: pchar; _type: Tgnutls_x509_crt_fmt_t; password: pchar): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_simple_pkcs12_mem(res: Tgnutls_certificate_credentials_t; p12blob: Pgnutls_datum_t; _type: Tgnutls_x509_crt_fmt_t; password: pchar): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_key(res: Tgnutls_certificate_credentials_t; cert_list: Pgnutls_x509_crt_t; cert_list_size: longint; key: Tgnutls_x509_privkey_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_trust(res: Tgnutls_certificate_credentials_t; ca_list: Pgnutls_x509_crt_t; ca_list_size: longint): longint; cdecl; external libgnutls;
function gnutls_certificate_set_x509_crl(res: Tgnutls_certificate_credentials_t; crl_list: Pgnutls_x509_crl_t; crl_list_size: longint): longint; cdecl; external libgnutls;
function gnutls_certificate_get_x509_key(res: Tgnutls_certificate_credentials_t; index: dword; key: Pgnutls_x509_privkey_t): longint; cdecl; external libgnutls;
function gnutls_certificate_get_x509_crt(res: Tgnutls_certificate_credentials_t; index: dword; crt_list: PPgnutls_x509_crt_t; crt_list_size: Pdword): longint; cdecl; external libgnutls;

type
  Tgnutls_status_request_ocsp_func = function(session: Tgnutls_session_t; ptr: pointer; ocsp_response: Pgnutls_datum_t): longint; cdecl;

procedure gnutls_certificate_set_ocsp_status_request_function(res: Tgnutls_certificate_credentials_t; ocsp_func: Tgnutls_status_request_ocsp_func; ptr: pointer); cdecl; external libgnutls;
function gnutls_certificate_set_ocsp_status_request_function2(res: Tgnutls_certificate_credentials_t; idx: dword; ocsp_func: Tgnutls_status_request_ocsp_func; ptr: pointer): longint; cdecl; external libgnutls;
function gnutls_certificate_set_ocsp_status_request_file(res: Tgnutls_certificate_credentials_t; response_file: pchar; idx: dword): longint; cdecl; external libgnutls;
function gnutls_certificate_set_ocsp_status_request_file2(res: Tgnutls_certificate_credentials_t; response_file: pchar; idx: dword; fmt: Tgnutls_x509_crt_fmt_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_ocsp_status_request_mem(res: Tgnutls_certificate_credentials_t; resp: Pgnutls_datum_t; idx: dword; fmt: Tgnutls_x509_crt_fmt_t): longint; cdecl; external libgnutls;

type
  Tgnutls_ocsp_data_st = record
    version: dword;
    response: Tgnutls_datum_t;
    exptime: Ttime_t;
    padding: array[0..31] of byte;
  end;
  Pgnutls_ocsp_data_st = ^Tgnutls_ocsp_data_st;
  PPgnutls_ocsp_data_st = ^Pgnutls_ocsp_data_st;

function gnutls_certificate_get_ocsp_expiration(sc: Tgnutls_certificate_credentials_t; idx: dword; oidx: longint; flags: dword): Ttime_t; cdecl; external libgnutls;
function gnutls_ocsp_status_request_enable_client(session: Tgnutls_session_t; responder_id: Pgnutls_datum_t; responder_id_size: Tsize_t; request_extensions: Pgnutls_datum_t): longint; cdecl; external libgnutls;
function gnutls_ocsp_status_request_get(session: Tgnutls_session_t; response: Pgnutls_datum_t): longint; cdecl; external libgnutls;

const
  GNUTLS_OCSP_SR_IS_AVAIL = 1;

function gnutls_ocsp_status_request_is_checked(session: Tgnutls_session_t; flags: dword): dword; cdecl; external libgnutls;
function gnutls_ocsp_status_request_get2(session: Tgnutls_session_t; idx: dword; response: Pgnutls_datum_t): longint; cdecl; external libgnutls;
function gnutls_certificate_set_rawpk_key_mem(cred: Tgnutls_certificate_credentials_t; spki: Pgnutls_datum_t; pkey: Pgnutls_datum_t; format: Tgnutls_x509_crt_fmt_t; pass: pchar;
  key_usage: dword; names: PPchar; names_length: dword; flags: dword): longint; cdecl; external libgnutls;
function gnutls_certificate_set_rawpk_key_file(cred: Tgnutls_certificate_credentials_t; rawpkfile: pchar; privkeyfile: pchar; format: Tgnutls_x509_crt_fmt_t; pass: pchar;
  key_usage: dword; names: PPchar; names_length: dword; privkey_flags: dword; pkcs11_flags: dword): longint; cdecl; external libgnutls;
function gnutls_global_init: longint; cdecl; external libgnutls;
procedure gnutls_global_deinit; cdecl; external libgnutls;
function gnutls_get_library_config: Pgnutls_library_config_st; cdecl; external libgnutls;

type
  Tgnutls_time_func = function(t: Ptime_t): Ttime_t; cdecl;
  Tmutex_init_func = function(mutex: Ppointer): longint; cdecl;
  Tmutex_lock_func = function(mutex: Ppointer): longint; cdecl;
  Tmutex_unlock_func = function(mutex: Ppointer): longint; cdecl;
  Tmutex_deinit_func = function(mutex: Ppointer): longint; cdecl;

procedure gnutls_global_set_mutex(init: Tmutex_init_func; deinit: Tmutex_deinit_func; lock: Tmutex_lock_func; unlock: Tmutex_unlock_func); cdecl; external libgnutls;

type
  Tgnutls_alloc_function = function(para1: Tsize_t): pointer; cdecl;
  Tgnutls_calloc_function = function(para1: Tsize_t; para2: Tsize_t): pointer; cdecl;
  Tgnutls_is_secure_function = function(para1: pointer): longint; cdecl;
  Tgnutls_free_function = procedure(para1: pointer); cdecl;
  Tgnutls_realloc_function = function(para1: pointer; para2: Tsize_t): pointer; cdecl;

procedure gnutls_global_set_time_function(time_func: Tgnutls_time_func); cdecl; external libgnutls;

var
  gnutls_malloc: Tgnutls_alloc_function; cvar;external libgnutls;
  gnutls_realloc: Tgnutls_realloc_function; cvar;external libgnutls;
  gnutls_calloc: Tgnutls_calloc_function; cvar;external libgnutls;
  gnutls_free: Tgnutls_free_function; cvar;external libgnutls;
  gnutls_strdup: function(para1: pchar): pchar; cvar;external libgnutls;

procedure gnutls_memset(data: pointer; c: longint; size: Tsize_t); cdecl; external libgnutls;
function gnutls_memcmp(s1: pointer; s2: pointer; n: Tsize_t): longint; cdecl; external libgnutls;

type
  Tgnutls_log_func = procedure(level: longint; msg: pchar); cdecl;
  Tgnutls_audit_log_func = procedure(para1: Tgnutls_session_t; para2: pchar); cdecl;

procedure gnutls_global_set_log_function(log_func: Tgnutls_log_func); cdecl; external libgnutls;
procedure gnutls_global_set_audit_log_function(log_func: Tgnutls_audit_log_func); cdecl; external libgnutls;
procedure gnutls_global_set_log_level(level: longint); cdecl; external libgnutls;

type
  Tgnutls_keylog_func = function(session: Tgnutls_session_t; _label: pchar; secret: Pgnutls_datum_t): longint; cdecl;
